Ass1_MT22/src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from d:\Bách Khoa\assignment1-initial\src\main\mt22\parser\MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'['", "']'", "'.'", "','", 
                     "';'", "':'", "'{'", "'}'", "'auto'", "'break'", "'boolean'", 
                     "'do'", "'else'", "'false'", "'float'", "'for'", "'function'", 
                     "'if'", "'integer'", "'return'", "'string'", "'true'", 
                     "'while'", "'void'", "'out'", "'continue'", "'of'", 
                     "'inherit'", "'array'", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", "'=='", 
                     "'!='", "'<'", "'<='", "'>'", "'>='", "'='", "'::'" ]

    symbolicNames = [ "<INVALID>", "INT_LIT", "FLOAT_LIT", "BOOL_LIT", "STRING_LIT", 
                      "LB", "RB", "LSB", "RSB", "DOT", "COMMA", "SEMI", 
                      "COLON", "LCB", "RCB", "AUTO", "BREAK", "BOOLEAN", 
                      "DO", "ELSE", "FALSE", "FLOAT", "FOR", "FUNC", "IF", 
                      "INT", "RETURN", "STR", "TRUE", "WHILE", "VOID", "OUT", 
                      "CONTINUE", "OF", "INHERIT", "ARRAY", "IDENTIFIER", 
                      "ADD", "SUB", "MUL", "DIV", "MOD", "NOT", "AND", "OR", 
                      "EQUAL", "NOT_EQUAL", "SMALLER", "SMALLER_OR_EQUAL", 
                      "BIGGER", "BIGGER_OR_EQUAL", "ASSIGN", "DOUBLECOLON", 
                      "COMMENT_BLOCK", "COMMENT_LINE", "WS", "ERROR_0", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_var_decl = 2
    RULE_var_assign = 3
    RULE_arr_type = 4
    RULE_list_type = 5
    RULE_para = 6
    RULE_para_list = 7
    RULE_func_decl = 8
    RULE_block_stmt = 9
    RULE_stmt = 10
    RULE_if_stmt = 11
    RULE_for_stmt = 12
    RULE_assign_for = 13
    RULE_while_stmt = 14
    RULE_do_while_stmt = 15
    RULE_break_stmt = 16
    RULE_continue_stmt = 17
    RULE_return_stmt = 18
    RULE_call_stmt = 19
    RULE_func_call = 20
    RULE_expr = 21
    RULE_relation_expr = 22
    RULE_logic_expr = 23
    RULE_add_expr = 24
    RULE_mul_expr = 25
    RULE_not_expr = 26
    RULE_sign_expr = 27
    RULE_exp9 = 28
    RULE_operand = 29
    RULE_expr_list = 30
    RULE_index_operators = 31
    RULE_expr_while = 32
    RULE_relation_expr1 = 33
    RULE_logic_expr1 = 34
    RULE_add_expr1 = 35
    RULE_mul_expr1 = 36
    RULE_not_expr1 = 37
    RULE_sign_expr1 = 38
    RULE_exp91 = 39
    RULE_operand1 = 40
    RULE_expr_list1 = 41
    RULE_index_operators1 = 42
    RULE_array = 43
    RULE_literal_element = 44
    RULE_literal = 45
    RULE_id_arr = 46

    ruleNames =  [ "program", "decl", "var_decl", "var_assign", "arr_type", 
                   "list_type", "para", "para_list", "func_decl", "block_stmt", 
                   "stmt", "if_stmt", "for_stmt", "assign_for", "while_stmt", 
                   "do_while_stmt", "break_stmt", "continue_stmt", "return_stmt", 
                   "call_stmt", "func_call", "expr", "relation_expr", "logic_expr", 
                   "add_expr", "mul_expr", "not_expr", "sign_expr", "exp9", 
                   "operand", "expr_list", "index_operators", "expr_while", 
                   "relation_expr1", "logic_expr1", "add_expr1", "mul_expr1", 
                   "not_expr1", "sign_expr1", "exp91", "operand1", "expr_list1", 
                   "index_operators1", "array", "literal_element", "literal", 
                   "id_arr" ]

    EOF = Token.EOF
    INT_LIT=1
    FLOAT_LIT=2
    BOOL_LIT=3
    STRING_LIT=4
    LB=5
    RB=6
    LSB=7
    RSB=8
    DOT=9
    COMMA=10
    SEMI=11
    COLON=12
    LCB=13
    RCB=14
    AUTO=15
    BREAK=16
    BOOLEAN=17
    DO=18
    ELSE=19
    FALSE=20
    FLOAT=21
    FOR=22
    FUNC=23
    IF=24
    INT=25
    RETURN=26
    STR=27
    TRUE=28
    WHILE=29
    VOID=30
    OUT=31
    CONTINUE=32
    OF=33
    INHERIT=34
    ARRAY=35
    IDENTIFIER=36
    ADD=37
    SUB=38
    MUL=39
    DIV=40
    MOD=41
    NOT=42
    AND=43
    OR=44
    EQUAL=45
    NOT_EQUAL=46
    SMALLER=47
    SMALLER_OR_EQUAL=48
    BIGGER=49
    BIGGER_OR_EQUAL=50
    ASSIGN=51
    DOUBLECOLON=52
    COMMENT_BLOCK=53
    COMMENT_LINE=54
    WS=55
    ERROR_0=56
    UNCLOSE_STRING=57
    ILLEGAL_ESCAPE=58
    ERROR_CHAR=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.DeclContext)
            else:
                return self.getTypedRuleContext(MT22Parser.DeclContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 94
                self.decl()
                self.state = 97 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MT22Parser.IDENTIFIER):
                    break

            self.state = 99
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(MT22Parser.Var_declContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def func_decl(self):
            return self.getTypedRuleContext(MT22Parser.Func_declContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.var_decl()
                self.state = 102
                self.match(MT22Parser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.func_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.IDENTIFIER)
            else:
                return self.getToken(MT22Parser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def var_decl(self):
            return self.getTypedRuleContext(MT22Parser.Var_declContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def arr_type(self):
            return self.getTypedRuleContext(MT22Parser.Arr_typeContext,0)


        def list_type(self):
            return self.getTypedRuleContext(MT22Parser.List_typeContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_var_decl




    def var_decl(self):

        localctx = MT22Parser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_decl)
        self._la = 0 # Token type
        try:
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.match(MT22Parser.IDENTIFIER)
                self.state = 108
                self.match(MT22Parser.COMMA)
                self.state = 109
                self.var_decl()
                self.state = 110
                self.match(MT22Parser.COMMA)
                self.state = 111
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.match(MT22Parser.IDENTIFIER)
                self.state = 114
                self.match(MT22Parser.COLON)
                self.state = 115
                self.arr_type()
                self.state = 116
                self.list_type()
                self.state = 117
                self.match(MT22Parser.ASSIGN)
                self.state = 118
                self.expr()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 120
                self.match(MT22Parser.IDENTIFIER)
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MT22Parser.COMMA:
                    self.state = 121
                    self.match(MT22Parser.COMMA)
                    self.state = 122
                    self.match(MT22Parser.IDENTIFIER)
                    self.state = 127
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 128
                self.match(MT22Parser.COLON)
                self.state = 129
                self.arr_type()
                self.state = 130
                self.list_type()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_assignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.IDENTIFIER)
            else:
                return self.getToken(MT22Parser.IDENTIFIER, i)

        def id_arr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.Id_arrContext)
            else:
                return self.getTypedRuleContext(MT22Parser.Id_arrContext,i)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_var_assign




    def var_assign(self):

        localctx = MT22Parser.Var_assignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_assign)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 134
                self.match(MT22Parser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.state = 135
                self.id_arr()
                pass


            self.state = 138
            self.match(MT22Parser.ASSIGN)
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 139
                self.expr()
                pass

            elif la_ == 2:
                self.state = 140
                self.match(MT22Parser.IDENTIFIER)
                pass

            elif la_ == 3:
                self.state = 141
                self.id_arr()
                pass


            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.SEMI:
                self.state = 144
                self.match(MT22Parser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arr_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def LSB(self):
            return self.getToken(MT22Parser.LSB, 0)

        def INT_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.INT_LIT)
            else:
                return self.getToken(MT22Parser.INT_LIT, i)

        def RSB(self):
            return self.getToken(MT22Parser.RSB, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def getRuleIndex(self):
            return MT22Parser.RULE_arr_type




    def arr_type(self):

        localctx = MT22Parser.Arr_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_arr_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.ARRAY:
                self.state = 147
                self.match(MT22Parser.ARRAY)
                self.state = 148
                self.match(MT22Parser.LSB)
                self.state = 149
                self.match(MT22Parser.INT_LIT)
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MT22Parser.COMMA:
                    self.state = 150
                    self.match(MT22Parser.COMMA)
                    self.state = 151
                    self.match(MT22Parser.INT_LIT)
                    self.state = 156
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 157
                self.match(MT22Parser.RSB)
                self.state = 158
                self.match(MT22Parser.OF)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(MT22Parser.INT, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STR(self):
            return self.getToken(MT22Parser.STR, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_list_type




    def list_type(self):

        localctx = MT22Parser.List_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_list_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.AUTO) | (1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INT) | (1 << MT22Parser.STR) | (1 << MT22Parser.VOID))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def arr_type(self):
            return self.getTypedRuleContext(MT22Parser.Arr_typeContext,0)


        def list_type(self):
            return self.getTypedRuleContext(MT22Parser.List_typeContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_para




    def para(self):

        localctx = MT22Parser.ParaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_para)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 163
                self.match(MT22Parser.INHERIT)


            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.OUT:
                self.state = 166
                self.match(MT22Parser.OUT)


            self.state = 169
            self.match(MT22Parser.IDENTIFIER)
            self.state = 170
            self.match(MT22Parser.COLON)
            self.state = 171
            self.arr_type()
            self.state = 172
            self.list_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Para_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def para(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.ParaContext)
            else:
                return self.getTypedRuleContext(MT22Parser.ParaContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def getRuleIndex(self):
            return MT22Parser.RULE_para_list




    def para_list(self):

        localctx = MT22Parser.Para_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_para_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.OUT) | (1 << MT22Parser.INHERIT) | (1 << MT22Parser.IDENTIFIER))) != 0):
                self.state = 174
                self.para()
                self.state = 179
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MT22Parser.COMMA:
                    self.state = 175
                    self.match(MT22Parser.COMMA)
                    self.state = 176
                    self.para()
                    self.state = 181
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.IDENTIFIER)
            else:
                return self.getToken(MT22Parser.IDENTIFIER, i)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNC(self):
            return self.getToken(MT22Parser.FUNC, 0)

        def arr_type(self):
            return self.getTypedRuleContext(MT22Parser.Arr_typeContext,0)


        def list_type(self):
            return self.getTypedRuleContext(MT22Parser.List_typeContext,0)


        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def para_list(self):
            return self.getTypedRuleContext(MT22Parser.Para_listContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Block_stmtContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_func_decl




    def func_decl(self):

        localctx = MT22Parser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(MT22Parser.IDENTIFIER)
            self.state = 185
            self.match(MT22Parser.COLON)
            self.state = 186
            self.match(MT22Parser.FUNC)
            self.state = 187
            self.arr_type()
            self.state = 188
            self.list_type()
            self.state = 189
            self.match(MT22Parser.LB)
            self.state = 190
            self.para_list()
            self.state = 191
            self.match(MT22Parser.RB)
            self.state = 194
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 192
                self.match(MT22Parser.INHERIT)
                self.state = 193
                self.match(MT22Parser.IDENTIFIER)


            self.state = 196
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(MT22Parser.LCB, 0)

        def RCB(self):
            return self.getToken(MT22Parser.RCB, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.StmtContext)
            else:
                return self.getTypedRuleContext(MT22Parser.StmtContext,i)


        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.Var_declContext)
            else:
                return self.getTypedRuleContext(MT22Parser.Var_declContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.SEMI)
            else:
                return self.getToken(MT22Parser.SEMI, i)

        def getRuleIndex(self):
            return MT22Parser.RULE_block_stmt




    def block_stmt(self):

        localctx = MT22Parser.Block_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_block_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 198
            self.match(MT22Parser.LCB)
            self.state = 205
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.INT_LIT) | (1 << MT22Parser.FLOAT_LIT) | (1 << MT22Parser.BOOL_LIT) | (1 << MT22Parser.STRING_LIT) | (1 << MT22Parser.LB) | (1 << MT22Parser.LCB) | (1 << MT22Parser.BREAK) | (1 << MT22Parser.DO) | (1 << MT22Parser.FOR) | (1 << MT22Parser.IF) | (1 << MT22Parser.RETURN) | (1 << MT22Parser.WHILE) | (1 << MT22Parser.CONTINUE) | (1 << MT22Parser.IDENTIFIER) | (1 << MT22Parser.SUB) | (1 << MT22Parser.NOT))) != 0):
                self.state = 203
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
                if la_ == 1:
                    self.state = 199
                    self.stmt()
                    pass
